 * `Install-FileShare` (fka `Install-SmbShare`):
    * Re-written to use WMI isntead of `net.exe`.
    * Modifies existing shares in place, instead of deleting and re-creating, *unless* the share's path changes. Changing a share's path requires the old share to be deleted and a new one created.
 
 
# 1.9.0 (8 November 2014)

This is the last minor release for version 1.0. Future 1.0-compatible releases will *only* contain bug fixes, no new features. It takes too much time to maintain two versions, and I'd rather spend my time getting 2.0 out the door.  Carbon 2.0 will require PowerShell 4.0, so start planning.

## Enhancements

### Certificates

 * Added `KeyStorageFlags` parameter to `Get-Certificate` when loading a certificate from a file for better control when storing the certificate.
 
### Hosts File

 * `Set-HostsEntry` now handles writing to an in-use/locked hosts file, retrying up to 10 times before writing an error, waiting a random amount of time (from 0 to 1000 milliseconds) between each retry attempt.

### IIS

 * `Get-IisMimeMap`, `Remove-IisMimeMap`, and `Set-IisMimeMap` now support managing MIME types for websites, virtual directories, and applications.

### Scheduled Tasks

 * Created `Get-ScheduledTask` function for getting the scheduled tasks on the local computer using `schtasks.exe`.
 * Created `Install-ScheduledTask` function for installing a scheduled task using `schtasks.exe`.
 * Created `Test-ScheduledTask` function for testing if a scheduled tasks on the local computer exists using `schtasks.exe`.
 * Created `Uninstall-ScheduledTask` function for deleting a scheduled task using `schtasks.exe`.
 
### Services

 * `Install-Service` now supports setting a command to run when a service fails.
 
## Bug Fixes

### General

 * `Import-Carbon` fails when `-WhatIf` switch is used.